--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "devicon": "^2.16.0",
-    "next": "14.2.5",
+    "framer-motion": "^11.17.0",
+    "next": "^14.2.23",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
@@ -22,6 +23,7 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
